--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <meta property="og:title" content="Gark Godwin Duque" />
+  <meta property="og:type" content="website" />
+
+  <meta property="og:title" content="Gark Gdwin Duque" />
+  <meta property="og:url" content="https://garkgodwin.netlify.app/" />
+  <meta property="og:description" content="Hi everyone! I am Gark Godwin Duque. A web developer." />
+
+  <meta property="og:image" content="https://garkgodwin.netlify.app/static/media/image-description.c0c12f83.jpeg" />
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1200">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
