--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,18 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#64c8ff" />
+  <meta property="og:title" content="Gark Godwin Duque" />
+  <meta property="og:type" content="website" />
+
+  <meta property="og:title" content="Gark Gdwin Duque" />
+  <meta property="og:url" content="https://garkgodwin.netlify.app/" />
+  <meta property="og:description" content="Hi everyone! I am Gark Godwin Duque. A web developer." />
+
+  <meta property="og:image" content="https://scontent.fdvo2-1.fna.fbcdn.net/v/t39.30808-6/240939638_3774670302633321_5973267978375625558_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=174925&_nc_eui2=AeF0TZlpOswarIeAa41Gri-OD1AVWYlCrQEPUBVZiUKtAQ0cgKEm3kPgd0tL2nlcRcELolCmHSzLyMVB5pRCh78S&_nc_ohc=ACwlviPMH8kAX_v3OXc&_nc_ht=scontent.fdvo2-1.fna&oh=4295807a6c9f4977ad222ca613c4ee8e&oe=616522BD" />
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1200">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,17 +32,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <meta property="og:title" content="Gark Godwin Duque" />
-  <meta property="og:type" content="website" />
-
-  <meta property="og:title" content="Gark Gdwin Duque" />
-  <meta property="og:url" content="https://garkgodwin.netlify.app/" />
-  <meta property="og:description" content="Hi everyone! I am Gark Godwin Duque. A web developer." />
-
-  <meta property="og:image" content="https://garkgodwin.netlify.app/static/media/image-description.c0c12f83.jpeg" />
-  <meta property="og:image:type" content="image/jpg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="1200">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
