added secure url

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <meta property="og:url" content="https://garkgodwin.netlify.app/" />
   <meta property="og:description" content="Hi everyone! I am Gark Godwin Duque. A web developer." />
   <meta property="og:image" content="https://scontent.fdvo2-1.fna.fbcdn.net/v/t39.30808-6/240939638_3774670302633321_5973267978375625558_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=174925&_nc_eui2=AeF0TZlpOswarIeAa41Gri-OD1AVWYlCrQEPUBVZiUKtAQ0cgKEm3kPgd0tL2nlcRcELolCmHSzLyMVB5pRCh78S&_nc_ohc=ACwlviPMH8kAX_v3OXc&_nc_ht=scontent.fdvo2-1.fna&oh=4295807a6c9f4977ad222ca613c4ee8e&oe=616522BD" />
+  <meta property="og:image:secure_url" content="https://scontent.fdvo2-1.fna.fbcdn.net/v/t39.30808-6/240939638_3774670302633321_5973267978375625558_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=174925&_nc_eui2=AeF0TZlpOswarIeAa41Gri-OD1AVWYlCrQEPUBVZiUKtAQ0cgKEm3kPgd0tL2nlcRcELolCmHSzLyMVB5pRCh78S&_nc_ohc=ACwlviPMH8kAX_v3OXc&_nc_ht=scontent.fdvo2-1.fna&oh=4295807a6c9f4977ad222ca613c4ee8e&oe=616522BD" />
+
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="1200">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
